--- a/src/components/edit-course/EditCourse.css
+++ b/src/components/edit-course/EditCourse.css
@@ -1,4 +1,4 @@
-.edit-container {
+.edit-course {
     /* background-color: blue; */
     display: flex;
     flex-direction: column;
@@ -15,10 +15,9 @@
     display: flex;
     margin-left: auto !important;
     margin-right: auto !important;
-    
 }
 
-.managment-course{
+.managment-course {
     display: flex;
     flex-direction: column;
     margin: 0;
@@ -32,11 +31,17 @@
     padding: 0 !important;
 }
 
-.save-cancle-buttons{
+.edit-course-buttons {
     margin-top: 20px;
     margin-left: auto !important;
     margin-right: auto !important;
 }
-.save-button{
+
+.save-button {
     margin-right: 60px !important;
+}
+
+.potential-authors-list, .course-authors-list {
+    overflow: auto;
+    max-height: 200px;
 }
