--- a/src/components/footer-app/FooterApp.css
+++ b/src/components/footer-app/FooterApp.css
@@ -1,7 +1,9 @@
-.footer{
-    position: absolute;
+.footer {
+    position: fixed;
+    left: 0;
     bottom: 0;
     width: 100%;
     background-color: #2196f3;
-    height: 2% !important;
-}
+    color: white;
+    text-align: center;
+ }
